fix civerage invocation, add accelerate to fix transformers bug

--- a/experiments/old_experiments/2025.01.22_sampler/sampler.ipynb
+++ b/experiments/old_experiments/2025.01.22_sampler/sampler.ipynb
@@ -21,15 +21,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from chatsky_llm_autoconfig.metrics.automatic_metrics import all_utterances_present"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -429,6 +420,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_json(data: dict, filename: str) -> None:\n",
+    "    with open(filename, \"w\", encoding=\"utf-8\") as file:\n",
+    "        json.dump(data, file, indent=4, ensure_ascii=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
    "outputs": [],
@@ -494,26 +496,6 @@
    "outputs": [],
    "source": [
     "graph.graph_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "edges_match_nodes(graph)"
    ]
   },
   {
@@ -1080,14 +1062,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "new_data = []\n",
     "i = 0\n",
     "for d in data:\n",
-    "    d[\"graph\"] = remove_duplicated_edges(d[\"graph\"])\n",
+    "    d[\"graph\"] = Graph(d[\"graph\"]).remove_duplicated_edges(d[\"graph\"])\n",
     "    new_data.append(d)"
    ]
   },
@@ -1235,26 +1217,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Complaining about hidden fees'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data[idx][\"topic\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -1397,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1495,7 +1457,7 @@
    "source": [
     "new_data = []\n",
     "for d in data:\n",
-    "    if all_utterances_present(d[\"graph\"], d[\"dialogues\"]) != True:\n",
+    "    if not all_utterances_present(d[\"graph\"], d[\"dialogues\"]):\n",
     "        print(d[\"topic\"])\n",
     "    else:\n",
     "        new_data.append(d)"
@@ -1689,17 +1651,6 @@
    ],
    "source": [
     "len(new_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def save_json(data: dict, filename: str) -> None:\n",
-    "    with open(filename, \"w\", encoding=\"utf-8\") as file:\n",
-    "        json.dump(data, file, indent=4, ensure_ascii=False)"
    ]
   },
   {
