--- a/experiments/exp2025_03_17_sample_graph_incrementation/exp2025_03_17_sample_graph_incrementation/graph_incrementation.ipynb
+++ b/experiments/exp2025_03_17_sample_graph_incrementation/exp2025_03_17_sample_graph_incrementation/graph_incrementation.ipynb
@@ -71,13 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "from dialogue2graph.pipelines.core.dialogue import Dialogue\n",
-    "from dialogue2graph.pipelines.core.graph import Graph"
+    "from dialogue2graph.pipelines.core.graph import Graph\n",
+    "from dialogue2graph.metrics.no_llm_metrics import triplet_match_accuracy"
    ]
   },
   {
