--- a/experiments/exp2025_03_12_rec_models_incrementation/exp2025_03_12_rec_models_incrementation/exp_with_o3-mini.ipynb
+++ b/experiments/exp2025_03_12_rec_models_incrementation/exp2025_03_12_rec_models_incrementation/exp_with_o3-mini.ipynb
@@ -18,6 +18,7 @@
    ],
    "source": [
     "from dotenv import load_dotenv\n",
+    "\n",
     "load_dotenv()"
    ]
   },
@@ -28,7 +29,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['PATH_TO_ENV'] = \"~/projects/chatsky-llm-autoconfig/.env\""
+    "\n",
+    "os.environ[\"PATH_TO_ENV\"] = \"~/projects/chatsky-llm-autoconfig/.env\""
    ]
   },
   {
@@ -49,6 +51,7 @@
    ],
    "source": [
     "from settings import EnvSettings\n",
+    "\n",
     "env_settings = EnvSettings()\n",
     "env_settings.GENERATION_MODEL_NAME"
    ]
@@ -71,7 +74,10 @@
     "import json\n",
     "from dialogue2graph.pipelines.core.dialogue import Dialogue\n",
     "from dialogue2graph.pipelines.core.graph import Graph\n",
-    "from dialogue2graph.metrics.no_llm_metrics.metrics import is_same_structure, triplet_match_accuracy"
+    "from dialogue2graph.metrics.no_llm_metrics.metrics import (\n",
+    "    is_same_structure,\n",
+    "    triplet_match_accuracy,\n",
+    ")"
    ]
   },
   {
@@ -85,10 +91,14 @@
     "from three_stages_0i import ThreeStagesGraphGenerator as GeneratorI0\n",
     "from append_chain import AppendChain\n",
     "\n",
-    "graph_generator = Generator(\"o3-mini\") # To generate 1st graph from one dialogue\n",
-    "graph_generator_llm_emb = GeneratorI() # To add dialogue to existing graph: adding nodes with LLM and edges with embedder\n",
-    "graph_generator_llm = GeneratorI0() # To add dialogue to existing graph with LLM\n",
-    "graph_generator_llm_2 = AppendChain() # To add (append) dialogue to existing graph with LLM (the second approach)"
+    "graph_generator = Generator(\"o3-mini\")  # To generate 1st graph from one dialogue\n",
+    "graph_generator_llm_emb = (\n",
+    "    GeneratorI()\n",
+    ")  # To add dialogue to existing graph: adding nodes with LLM and edges with embedder\n",
+    "graph_generator_llm = GeneratorI0()  # To add dialogue to existing graph with LLM\n",
+    "graph_generator_llm_2 = (\n",
+    "    AppendChain()\n",
+    ")  # To add (append) dialogue to existing graph with LLM (the second approach)"
    ]
   },
   {
@@ -115,7 +125,7 @@
     "            check_duplicated_nodes = True\n",
     "        else:\n",
     "            check_duplicated_nodes = False\n",
-    "    \n",
+    "\n",
     "    if edges_match_nodes and check_duplicated_nodes:\n",
     "        return True\n",
     "    else:\n",
@@ -130,19 +140,19 @@
    "source": [
     "def get_start_data(dataset, graph_id):\n",
     "    for data in dataset:\n",
-    "        if data['graph_id'] == graph_id:\n",
+    "        if data[\"graph_id\"] == graph_id:\n",
     "            example = data\n",
     "            break\n",
-    "    true_graph = Graph(graph_dict=example['graph'])\n",
+    "    true_graph = Graph(graph_dict=example[\"graph\"])\n",
     "    validate_graph(true_graph)\n",
-    "    true_graph.visualise_short('true_graph')\n",
+    "    true_graph.visualise_short(\"true_graph\")\n",
     "\n",
-    "    dialogues = example['dialogues']\n",
-    "    \n",
-    "    example['incremental'] = {}\n",
+    "    dialogues = example[\"dialogues\"]\n",
+    "\n",
+    "    example[\"incremental\"] = {}\n",
     "    for i in range(len(dialogues)):\n",
-    "        example['incremental'].setdefault(f'graph_{i}')\n",
-    "    \n",
+    "        example[\"incremental\"].setdefault(f\"graph_{i}\")\n",
+    "\n",
     "    return example, true_graph, dialogues"
    ]
   },
@@ -152,8 +162,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '../data/generated_24_with_ids.json'\n",
-    "with open(path, 'r', encoding=\"utf-8\") as f:\n",
+    "path = \"../data/generated_24_with_ids.json\"\n",
+    "with open(path, \"r\", encoding=\"utf-8\") as f:\n",
     "    generated_24 = json.load(f)"
    ]
   },
@@ -327,7 +337,7 @@
     }
    ],
    "source": [
-    "first_dialogue = Dialogue.from_list(dialogues[0]['messages'])\n",
+    "first_dialogue = Dialogue.from_list(dialogues[0][\"messages\"])\n",
     "first_graph = graph_generator.invoke([first_dialogue])\n",
     "validate_graph(first_graph)"
    ]
@@ -338,7 +348,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example['incremental']['graph_0'] = first_graph.graph_dict"
+    "example[\"incremental\"][\"graph_0\"] = first_graph.graph_dict"
    ]
   },
   {
@@ -347,7 +357,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"gen24_graphid13_incremental_o3-mini_TSG.json\", \"w\", encoding=\"utf-8\") as file:\n",
+    "with open(\n",
+    "    \"gen24_graphid13_incremental_o3-mini_TSG.json\", \"w\", encoding=\"utf-8\"\n",
+    ") as file:\n",
     "    json.dump(example, file, indent=4, sort_keys=True)"
    ]
   },
@@ -358,9 +370,11 @@
    "outputs": [],
    "source": [
     "# load the first graph as we already have it\n",
-    "with open(\"../data/gen24_graphid13_incremental_o3-mini_TSG.json\", 'r', encoding=\"utf-8\") as f:\n",
+    "with open(\n",
+    "    \"../data/gen24_graphid13_incremental_o3-mini_TSG.json\", \"r\", encoding=\"utf-8\"\n",
+    ") as f:\n",
     "    _ = json.load(f)\n",
-    "example['incremental']['graph_0'] = _['incremental']['graph_0']"
+    "example[\"incremental\"][\"graph_0\"] = _[\"incremental\"][\"graph_0\"]"
    ]
   },
   {
@@ -439,13 +453,13 @@
    "source": [
     "for i in range(len(dialogues)):\n",
     "    if i == 0:\n",
-    "        result_graph = Graph(example['incremental']['graph_0'])\n",
+    "        result_graph = Graph(example[\"incremental\"][\"graph_0\"])\n",
     "    else:\n",
-    "        new_dialogue = Dialogue.from_list(dialogues[i]['messages'])\n",
+    "        new_dialogue = Dialogue.from_list(dialogues[i][\"messages\"])\n",
     "        try:\n",
     "            result_graph = graph_generator_llm.invoke([new_dialogue], result_graph)\n",
-    "            print(f'validate_graph {i}:', validate_graph(result_graph))\n",
-    "            example['incremental'][f'graph_{i}'] = result_graph.graph_dict\n",
+    "            print(f\"validate_graph {i}:\", validate_graph(result_graph))\n",
+    "            example[\"incremental\"][f\"graph_{i}\"] = result_graph.graph_dict\n",
     "        except Exception as e:\n",
     "            raise e"
    ]
@@ -456,7 +470,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"gen24_graphid13_incremental_o3-mini_TSG.json\", \"w\", encoding=\"utf-8\") as file:\n",
+    "with open(\n",
+    "    \"gen24_graphid13_incremental_o3-mini_TSG.json\", \"w\", encoding=\"utf-8\"\n",
+    ") as file:\n",
     "    json.dump(example, file, indent=4, sort_keys=True)"
    ]
   },
@@ -467,7 +483,9 @@
    "outputs": [],
    "source": [
     "# load graphs as we already have them\n",
-    "with open(\"../data/gen24_graphid13_incremental_o3-mini_TSG.json\", 'r', encoding=\"utf-8\") as f:\n",
+    "with open(\n",
+    "    \"../data/gen24_graphid13_incremental_o3-mini_TSG.json\", \"r\", encoding=\"utf-8\"\n",
+    ") as f:\n",
     "    example = json.load(f)"
    ]
   },
@@ -528,12 +546,12 @@
     }
    ],
    "source": [
-    "true_graph.visualise_short('true_graph')\n",
-    "for i, result_graph in enumerate(example['incremental'].values()):\n",
+    "true_graph.visualise_short(\"true_graph\")\n",
+    "for i, result_graph in enumerate(example[\"incremental\"].values()):\n",
     "    if i == 0:\n",
-    "        Graph(result_graph).visualise_short('result_graph (dialogues 0)')\n",
+    "        Graph(result_graph).visualise_short(\"result_graph (dialogues 0)\")\n",
     "    else:\n",
-    "        Graph(result_graph).visualise_short(f'result_graph (dialogues 0-{i})')"
+    "        Graph(result_graph).visualise_short(f\"result_graph (dialogues 0-{i})\")"
    ]
   },
   {
@@ -553,7 +571,7 @@
     }
    ],
    "source": [
-    "is_same_structure(true_graph, Graph(example['incremental']['graph_3']))"
+    "is_same_structure(true_graph, Graph(example[\"incremental\"][\"graph_3\"]))"
    ]
   },
   {
@@ -584,7 +602,7 @@
     }
    ],
    "source": [
-    "triplet_match_accuracy(true_graph, Graph(example['incremental']['graph_3']))"
+    "triplet_match_accuracy(true_graph, Graph(example[\"incremental\"][\"graph_3\"]))"
    ]
   },
   {
@@ -612,9 +630,11 @@
    ],
    "source": [
     "example, true_graph, dialogues = get_start_data(generated_24, 13)\n",
-    "with open(\"../data/gen24_graphid13_incremental_o3-mini_TSG.json\", 'r', encoding=\"utf-8\") as f:\n",
+    "with open(\n",
+    "    \"../data/gen24_graphid13_incremental_o3-mini_TSG.json\", \"r\", encoding=\"utf-8\"\n",
+    ") as f:\n",
     "    _ = json.load(f)\n",
-    "example['incremental']['graph_0'] = _['incremental']['graph_0'] "
+    "example[\"incremental\"][\"graph_0\"] = _[\"incremental\"][\"graph_0\"]"
    ]
   },
   {
@@ -826,13 +846,15 @@
    "source": [
     "for i in range(len(dialogues)):\n",
     "    if i == 0:\n",
-    "        result_graph = Graph(example['incremental']['graph_0'])\n",
+    "        result_graph = Graph(example[\"incremental\"][\"graph_0\"])\n",
     "    else:\n",
-    "        new_dialogue = Dialogue.from_list(dialogues[i]['messages'])\n",
+    "        new_dialogue = Dialogue.from_list(dialogues[i][\"messages\"])\n",
     "        try:\n",
-    "            result_graph, _ = graph_generator_llm_emb.invoke([new_dialogue], result_graph)\n",
-    "            print(f'validate_graph {i}:', validate_graph(result_graph))\n",
-    "            example['incremental'][f'graph_{i}'] = result_graph.graph_dict\n",
+    "            result_graph, _ = graph_generator_llm_emb.invoke(\n",
+    "                [new_dialogue], result_graph\n",
+    "            )\n",
+    "            print(f\"validate_graph {i}:\", validate_graph(result_graph))\n",
+    "            example[\"incremental\"][f\"graph_{i}\"] = result_graph.graph_dict\n",
     "        except Exception as e:\n",
     "            raise e"
    ]
@@ -843,7 +865,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"gen24_graphid13_incremental_o3-mini_TSG_emb.json\", \"w\", encoding=\"utf-8\") as file:\n",
+    "with open(\n",
+    "    \"gen24_graphid13_incremental_o3-mini_TSG_emb.json\", \"w\", encoding=\"utf-8\"\n",
+    ") as file:\n",
     "    json.dump(example, file, indent=4, sort_keys=True)"
    ]
   },
@@ -853,7 +877,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../data/gen24_graphid13_incremental_o3-mini_TSG_emb.json\", 'r', encoding=\"utf-8\") as f:\n",
+    "with open(\n",
+    "    \"../data/gen24_graphid13_incremental_o3-mini_TSG_emb.json\", \"r\", encoding=\"utf-8\"\n",
+    ") as f:\n",
     "    example = json.load(f)"
    ]
   },
@@ -914,12 +940,12 @@
     }
    ],
    "source": [
-    "true_graph.visualise_short('true_graph')\n",
-    "for i, result_graph in enumerate(example['incremental'].values()):\n",
+    "true_graph.visualise_short(\"true_graph\")\n",
+    "for i, result_graph in enumerate(example[\"incremental\"].values()):\n",
     "    if i == 0:\n",
-    "        Graph(result_graph).visualise_short('result_graph (dialogues 0)')\n",
+    "        Graph(result_graph).visualise_short(\"result_graph (dialogues 0)\")\n",
     "    else:\n",
-    "        Graph(result_graph).visualise_short(f'result_graph (dialogues 0-{i})')"
+    "        Graph(result_graph).visualise_short(f\"result_graph (dialogues 0-{i})\")"
    ]
   },
   {
@@ -939,7 +965,7 @@
     }
    ],
    "source": [
-    "is_same_structure(true_graph, Graph(example['incremental']['graph_3']))"
+    "is_same_structure(true_graph, Graph(example[\"incremental\"][\"graph_3\"]))"
    ]
   },
   {
@@ -968,7 +994,7 @@
     }
    ],
    "source": [
-    "triplet_match_accuracy(true_graph, Graph(example['incremental']['graph_3']))"
+    "triplet_match_accuracy(true_graph, Graph(example[\"incremental\"][\"graph_3\"]))"
    ]
   },
   {
@@ -996,9 +1022,11 @@
    ],
    "source": [
     "example, true_graph, dialogues = get_start_data(generated_24, 13)\n",
-    "with open(\"../data/gen24_graphid13_incremental_o3-mini_TSG.json\", 'r', encoding=\"utf-8\") as f:\n",
+    "with open(\n",
+    "    \"../data/gen24_graphid13_incremental_o3-mini_TSG.json\", \"r\", encoding=\"utf-8\"\n",
+    ") as f:\n",
     "    _ = json.load(f)\n",
-    "example['incremental']['graph_0'] = _['incremental']['graph_0'] "
+    "example[\"incremental\"][\"graph_0\"] = _[\"incremental\"][\"graph_0\"]"
    ]
   },
   {
@@ -1071,13 +1099,15 @@
    "source": [
     "for i in range(len(dialogues)):\n",
     "    if i == 0:\n",
-    "        result_graph = Graph(example['incremental']['graph_0'])\n",
+    "        result_graph = Graph(example[\"incremental\"][\"graph_0\"])\n",
     "    else:\n",
-    "        new_dialogue = Dialogue.from_list(dialogues[i]['messages'])\n",
+    "        new_dialogue = Dialogue.from_list(dialogues[i][\"messages\"])\n",
     "        try:\n",
-    "            result_graph = graph_generator_llm_2.invoke(dialogues[(i-1):(i+1)], result_graph)\n",
-    "            print(f'validate_graph {i}:', validate_graph(result_graph))\n",
-    "            example['incremental'][f'graph_{i}'] = result_graph.graph_dict\n",
+    "            result_graph = graph_generator_llm_2.invoke(\n",
+    "                dialogues[(i - 1) : (i + 1)], result_graph\n",
+    "            )\n",
+    "            print(f\"validate_graph {i}:\", validate_graph(result_graph))\n",
+    "            example[\"incremental\"][f\"graph_{i}\"] = result_graph.graph_dict\n",
     "        except Exception as e:\n",
     "            raise e"
    ]
@@ -1088,7 +1118,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../data/gen24_graphid13_incremental_o3-mini_AppCh.json\", \"w\", encoding=\"utf-8\") as file:\n",
+    "with open(\n",
+    "    \"../data/gen24_graphid13_incremental_o3-mini_AppCh.json\", \"w\", encoding=\"utf-8\"\n",
+    ") as file:\n",
     "    json.dump(example, file, indent=4, sort_keys=True)"
    ]
   },
@@ -1098,7 +1130,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../data/gen24_graphid13_incremental_o3-mini_AppCh.json\", 'r', encoding=\"utf-8\") as f:\n",
+    "with open(\n",
+    "    \"../data/gen24_graphid13_incremental_o3-mini_AppCh.json\", \"r\", encoding=\"utf-8\"\n",
+    ") as f:\n",
     "    example = json.load(f)"
    ]
   },
@@ -1159,12 +1193,12 @@
     }
    ],
    "source": [
-    "true_graph.visualise_short('true_graph')\n",
-    "for i, result_graph in enumerate(example['incremental'].values()):\n",
+    "true_graph.visualise_short(\"true_graph\")\n",
+    "for i, result_graph in enumerate(example[\"incremental\"].values()):\n",
     "    if i == 0:\n",
-    "        Graph(result_graph).visualise_short('result_graph (dialogues 0)')\n",
+    "        Graph(result_graph).visualise_short(\"result_graph (dialogues 0)\")\n",
     "    else:\n",
-    "        Graph(result_graph).visualise_short(f'result_graph (dialogues 0-{i})')"
+    "        Graph(result_graph).visualise_short(f\"result_graph (dialogues 0-{i})\")"
    ]
   },
   {
@@ -1184,7 +1218,7 @@
     }
    ],
    "source": [
-    "is_same_structure(true_graph, Graph(example['incremental']['graph_3']))"
+    "is_same_structure(true_graph, Graph(example[\"incremental\"][\"graph_3\"]))"
    ]
   },
   {
@@ -1212,7 +1246,7 @@
     }
    ],
    "source": [
-    "triplet_match_accuracy(true_graph, Graph(example['incremental']['graph_3']))"
+    "triplet_match_accuracy(true_graph, Graph(example[\"incremental\"][\"graph_3\"]))"
    ]
   }
  ],
